k8s/frontend/frontend-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-green
  namespace: frontend
  labels:
    app: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-green
  template:
    metadata:
      labels:
        app: frontend-green
    spec:
      containers:
        - name: frontend
          image: ghcr.io/billybala/multienv-app-kubernetes/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-storage
              mountPath: /usr/share/nginx/html/shared
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf

      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
